cmake_minimum_required(VERSION 3.10)

PROJECT(boascript_suite)

SET(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/distribution)
 
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 
#SET(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)


ENABLE_TESTING()

ADD_SUBDIRECTORY(lib)

SET(CMAKE_INSTALL_PREFIX ..)
