CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(Boascript VERSION 1.0.0 DESCRIPTION "Build Boascript Interpreter as static library")

SET(CMAKE_CXX_STANDARD 14)

EXECUTE_PROCESS(COMMAND uname OUTPUT_VARIABLE UNAME)
STRING(REGEX REPLACE "\n$" "" UNAME "${UNAME}")

MESSAGE("uname = ${UNAME}")

IF("${UNAME}" STREQUAL "Darwin")
    SET(ROOT_DIR ..)
ELSE()
    SET(ROOT_DIR ..)
ENDIF()

SET (HOME $ENV{HOME})

MESSAGE("home = ${HOME}")
MESSAGE("destdir = ${DESTDIR}")
MESSAGE("prefix = ${CMAKE_INSTALL_PREFIX}")
MESSAGE("bin = ${PROJECT_BINARY_DIR}")


SET(SRC_DIR ${PROJECT_SOURCE_DIR}/src)
SET(EXTERN_DIR extras)

ADD_CUSTOM_TARGET(generate_boa ALL DEPENDS ${SRC_DIR}/${PROJECT_NAME}.y)

ADD_CUSTOM_COMMAND(OUTPUT ${PROJECT_NAME}.tab.cpp ${PROJECT_NAME}.tab.h PRE_BUILD
        COMMAND ${HOME}/bin/ooyacc -b ${PROJECT_NAME} -d ${SRC_DIR}/${PROJECT_NAME}.y
        WORKING_DIRECTORY ${SOURCE_DIR}
)

SET(SOURCE_FILES
        ${PROJECT_NAME}.tab.cpp
        ${EXTERN_DIR}/DateTime.cpp
)

INCLUDE_DIRECTORIES(
        ${SRC_DIR}
        ${EXTERN_DIR}
)

#LINK_DIRECTORIES(
#)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCE_FILES})

SET(CMAKE_INSTALL_PREFIX ..)

#INSTALL(TARGETS Boascript DESTINATION distribution)
INSTALL(FILES
        ${PROJECT_BINARY_DIR}/${PROJECT_NAME}.tab.h
        ${PROJECT_BINARY_DIR}/lib${PROJECT_NAME}.a
        DESTINATION distribution)
